--- a/main.html
+++ b/main.html
@@ -10,7 +10,23 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <div>
+        <!-- Block Elements -->
+        <div data-ns-test="block-inline-div">
+            Test1
+            <p data-ns-test="block-inline-p">Test2</p>
+            <h1 data-ns-test="block-inline-h1">Test2</h1>
+        </div>
 
+        <!-- Inline Elements -->
+        <span data-ns-test="block-inline-span">Test1</span>
+        <input type="text" data-ns-test="block-inline-input" value="Test2">
+        <cite data-ns-test="block-inline-cite">Test1</cite>
+        <code data-ns-test="block-inline-code">Test1</code>
+        <sup data-ns-test="block-inline-sup">Test1</sup>
+        <sub data-ns-test="block-inline-sub">Test1</sub>
+        <button data-ns-test="block-inline-button">Test1</button>
+    </div>
 </body>
 
 </html>
